--- a/package.json
+++ b/package.json
@@ -1,19 +1,56 @@
 {
-  "name": "simpleflightsearch",
-  "version": "1.0.0",
-  "description": "Query a mock service and display results",
-  "main": "index.js",
+  "name": "flightsearch",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lvblazer/simpleFlightSearch.git"
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^6.0.6",
+    "@angular/cdk": "^6.0.6-rc.2",
+    "@angular/common": "^6.0.6",
+    "@angular/compiler": "^6.0.6",
+    "@angular/core": "^6.0.6",
+    "@angular/forms": "^6.0.6",
+    "@angular/http": "^6.0.6",
+    "@angular/material": "^6.3.0",
+    "@angular/platform-browser": "^6.0.6",
+    "@angular/platform-browser-dynamic": "^6.0.6",
+    "@angular/router": "^6.0.6",
+    "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "ng2-nouislider": "^1.7.4",
+    "nouislider": "10.0.0",
+    "rxjs": "^6.2.1",
+    "zone.js": "^0.8.14"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lvblazer/simpleFlightSearch/issues"
-  },
-  "homepage": "https://github.com/lvblazer/simpleFlightSearch#readme"
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.7.0-beta.2",
+    "@angular/cli": "^6.0.7",
+    "@angular/compiler-cli": "^6.0.6",
+    "@angular/language-service": "^6.0.6",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "@types/nouislider": "^9.0.1",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "^2.7.2"
+  }
 }
